Fix a small bug in default css : add border-collapse for results tbale.
git-svn-id: http://svn.gna.org/svn/nevertable/trunk@100 8c9cce2d-531c-0410-91e8-f72d6ccfd7b9

--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -112,6 +112,11 @@ caption {
    clear: both;
 }
 
+
+.results table {
+	border-collapse:collapse;
+}
+
 .results tr:hover {
     background : #fff;
 }
